--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -53,7 +53,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/coffee.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Scotched eggs,french toast and sausages </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>coffee with whole milk</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 3.00</span> </p>
@@ -71,7 +71,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/sausages.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Two sausages,bacon and toast </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>hot choclate with whole milk</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 5.00</span> </p>
@@ -96,7 +96,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/fish.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>wet fried fish </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>ugali</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 15.00</span> </p>
@@ -113,7 +113,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/beef.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>grilled chops </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>a side plate </b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 12.00</span> </p>
@@ -131,7 +131,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/drumsticks.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Chicken Drumsticks </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>plain rice</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 22.00</span> </p>
@@ -155,7 +155,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/kagwe.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>french fries </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>two sausages and barley</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 10.00</span> </p>
@@ -173,7 +173,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/swine.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Wet fried pork with thick paste  </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>ugali</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 15.00</span> </p>
@@ -191,7 +191,7 @@
                             <div class="panel">
                                 <br>
                                 <br>
-                                <img src="/static/photos/meal.png" class="meal" alt="Image">
+                                <img src="/static/photos/game.png" class="meal" alt="Image">
                                 <div class="caption">
                                     <p><b>Game meat </b> <span style="color: #e8491d; font-size: 10pt"> served with </span> <b>local desert</b></p>
                                     <p style="font-size: 10pt"><b>Total: </b><span style="color: #e8491d; font-size: 10pt">$ 13.00</span> </p>
