--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,14 @@
 <!-- Content Block-->
 {% block content %}
 <div class="container">
+  <hr>
+  <hr>
+  <hr>
   <!-- /banner -->
-  <div class="banner-info-w3layouts text-center">
-      <h3>Burger Special</h3>
+  <div class="banner-info-w3layouts main-content text-center">
+      <h3>Imeal Special</h3>
       <div class="read-more">
-      <a href="#about" class="read-more scroll">Read More </a> </div>
+      <a href="/viewmenu" class="read-more scroll">Order Now! </a> </div>
   </div>
   <div class="row order-info">
       <div class="middle mt-3 col-md-6 text-left">
@@ -275,7 +278,7 @@
                         </ul>
                     </div>
                     <div class="read-more mx-auto text-center">
-                        <a href="#contact" class="read-more scroll">Order Now </a> </div>
+                        <a href="/viewmenu" class="read-more scroll">Order Now </a> </div>
                 </div>
             </div>
         </div>
@@ -550,6 +553,6 @@
         </div>
     </footer>
     <!-- //footer -->
-  
+
 </div>
 {% endblock %}
