--- a/app/templates/admin/navbar.html
+++ b/app/templates/admin/navbar.html
@@ -13,9 +13,6 @@
       <li><a href="/about" class="scroll">About</a></li>
       <li>
         <!-- Second Tier Drop Down -->
-        {%if current_user%}
-
-        {%else%}
         <label for="drop-2" class="toggle">Authentications <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
         <a href="#">Authentications <span class="fa fa-angle-down" aria-hidden="true"></span></a>
         <input type="checkbox" id="drop-2" />
@@ -23,12 +20,12 @@
             <li><a class="scroll" href="{{url_for('auth.register')}}">Join The Fun</a></li>
             <li><a href="{{url_for('auth.login')}}" class="scroll">Welcome back</a></li>
         </ul>
-        {%endif%}
       </li>
-      <li><a href="/viewmenu" class="scroll">Menu of the day</a></li>
+      <li><a href="#contact" class="scroll">Contact</a></li>
+  </ul>
       {% if current_user.is_authenticated %}
       {% if current_user.usertype == "Customer" %}
-      <li><a href="/viewmenu" class="scroll">Menu</a></li>
+      <li><a href="#menu" class="scroll">Menu</a></li>
       <li>
           <!-- First Tier Drop Down -->
           <label for="drop-2" class="toggle">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
@@ -57,9 +54,7 @@
         </ul>
       </li>
       <li><a href="#contact" class="scroll">Contact</a></li>
-      </nav>
-      {% endif%}
-  </ul>
-
+</nav>
+  {% endif%}
 
 {% endblock %}
